# mcp-agent-server

./: README.md  pyproject.toml
mcp_agent_server/: __init__.py  __main__.py  conversation.py  server.py  utils.py
mcp_agent_server/data/: conversation_tools.md  meta_thinking.md  tools.md
mcp_agent_server/prompts/: agent_prompt.jinja  meta_thinking_system.jinja  prompt_utils.py  user_prompt.jinja
src/: server.py  utils.py
src/data/: problem_solving.md
src/prompts/: meta_thinking_system.jinja  prompt_utils.py
