[project]
name = "mcp-agent-server"
version = "0.1.0"
description = "MCP Agent Server to interact with multiple domain experts"
authors = [
    { name="Litu Ou", email="lituou907@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-agent-server = "src:main"