[project]
name = "mcp-agent-server"
version = "0.1.0"
description = "MCP Agent Server to interact with multiple domain experts"
authors = [
    { name="Litu Ou", email="lituou907@gmail.com" }
]
readme = "README.md"
requires-python = "3.11"

[project.scripts]
mcp-agent-server = "mcp_agent_server:main"